# substrate-node-template

./: .gitignore  README.md  customSpec.json  customSpecRaw.json  docker-compose.yml
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/private-sales/: Cargo.toml
pallets/private-sales/src/: lib.rs  mock.rs  tests.rs  types.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: docker_run.sh
