[package]
authors = ["Hawking Technologies <dung.lam@hawking.network>"]
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "node-primitives"
repository = "https://github.com/hawkingnetwork/substrate-node-template/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

[dev-dependencies]
pretty_assertions = "0.6.1"
sp-serializer = { version = "3.0.0" }

[features]
default = ["std"]
std = ["sp-core/std", "sp-runtime/std"]
