[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
hex-literal = { optional = true, version = '0.3.1' }
serde = { version = "1.0.119", optional = true, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-assets = { default-features = false, version = '3.0.0' }
pallet-staking = { default-features = false, version = '3.0.0' }
pallet-treasury = { default-features = false, version = '3.0.0' }
pallet-staking-reward-curve = { default-features = false, version = '3.0.0' }
pallet-collective = { default-features = false, version = '3.0.0' }
pallet-session = { default-features = false, version = '3.0.0' }
pallet-babe = { default-features = false, version = '3.0.0' }
pallet-im-online = { default-features = false, version = '3.0.0' }
pallet-authority-discovery = { default-features = false, version = '3.0.0' }
pallet-offences = { default-features = false, version = '3.0.0' }
pallet-bounties = { default-features = false, version = '3.0.0' }
pallet-authorship = { default-features = false, version = '3.0.0' }
pallet-contracts = { default-features = false, version = '3.0.0' }
pallet-contracts-primitives = { default-features = false, version = '3.0.0' }
pallet-contracts-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
sp-staking = { default-features = false, version = '3.0.0' }
sp-authority-discovery = { default-features = false, version = '3.0.0' }
sp-consensus-babe = { default-features = false, version = '0.9.0' }

# local dependencies
pallet-template = { default-features = false, path = '../pallets/template', version = '3.0.0' }
node-primitives = { default-features = false, path = '../primitives', version = '3.0.0' }
pallet-private-sales = { default-features = false, path = '../pallets/private-sales', version = '3.0.0' }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-template/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-assets/runtime-benchmarks',
    'pallet-staking/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-babe/runtime-benchmarks',
    'pallet-im-online/runtime-benchmarks',
    'pallet-bounties/runtime-benchmarks',
    'pallet-contracts/runtime-benchmarks',
    'pallet-private-sales/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-assets/std',
    'pallet-staking/std',
    'pallet-treasury/std',
    'pallet-collective/std',
    'pallet-babe/std',
    'pallet-im-online/std',
    'pallet-authority-discovery/std',
    'pallet-bounties/std',
    'pallet-contracts/std',
    "pallet-contracts-primitives/std",
    "pallet-contracts-rpc-runtime-api/std",
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-consensus-babe/std',
]
